maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:13: error: type mismatch;
 found   : Unit
 required: Int
    count=keepHandOnSideWall(count)
                            ^PledgeMaze:49: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return(count1)
  ^